nav bar and dark mode fixed

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,14 @@
     height: 24px;
 }
 
+/* Default light theme */
+body {
+    background-color: #fffff0;
+    color: #2d3748;
+}
+
+/* Dark theme */
+body.dark {
+    background-color: #2d3748;
+    color: #fffff0;
+}
